discussion/kv_engine/168540/168540_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50266: Collector-ify Warmup stats

To use one consistent stat style in warmup.cc

Change-Id: I0ff10caf5673cdef8190919f6a4fda7406b19663

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-01-11 14:55:26.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-01-11 15:19:30.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14741/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/warmup.cc:1914:14: error: out-of-line definition of "addCommonStats" does not match any declaration in "Warmup" [clang-diagnostic-error]
void Warmup::addCommonStats(const StatCollector& collector) const {
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/warmup.cc:1933:14: error: out-of-line definition of "addStats" does not match any declaration in "Warmup" [clang-diagnostic-error]
void Warmup::addStats(const StatCollector& collector) const {
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/warmup.h:241:31: error: unknown type name "StatCollector" [clang-diagnostic-error]
    void addCommonStats(const StatCollector& collector) const;
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/warmup.h:243:25: error: unknown type name "StatCollector" [clang-diagnostic-error]
    void addStats(const StatCollector& c) const;
                        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14741/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/warmup.cc:1914:14:
error: out-of-line definition of "addCommonStats" does not match any declaration in "Warmup" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14741/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36198/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/warmup.h:241:31:
error: unknown type name "StatCollector"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36198/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13574/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13574/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4443/ : FAILURE

Compile error at [2022-01-11T15:01:16.550Z] ../kv_engine/engines/ep/src/warmup.h:241:31:
error: ?StatCollector? does not name a type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4443/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16403/ : FAILURE

Compile error at [2022-01-11T14:58:56.019Z] ../kv_engine/engines/ep/src/warmup.h:241:31:
error: ?StatCollector? does not name a type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16403/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17488/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16694/ : FAILURE

Compile error at [2022-01-11T15:03:32.827Z] ../kv_engine/engines/ep/src/warmup.h:241:31:
error: ?StatCollector? does not name a type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16694/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42714/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24815/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4386/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15547/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: James H
Date: 2022-01-11 15:30:24.000000000
Message: 
Patch Set 2: Code-Review+1
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-01-12 10:55:12.000000000
Message: 
Patch Set 2:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4460/ : FAILURE

Compile error at [2022-01-12T10:37:54.257Z] ../kv_engine/engines/ep/src/warmup.h:241:31:
error: ?StatCollector? does not name a type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4460/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14757/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/warmup.cc:1914:14: error: out-of-line definition of "addCommonStats" does not match any declaration in "Warmup" [clang-diagnostic-error]
void Warmup::addCommonStats(const StatCollector& collector) const {
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/warmup.cc:1933:14: error: out-of-line definition of "addStats" does not match any declaration in "Warmup" [clang-diagnostic-error]
void Warmup::addStats(const StatCollector& collector) const {
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/warmup.h:241:31: error: unknown type name "StatCollector" [clang-diagnostic-error]
    void addCommonStats(const StatCollector& collector) const;
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/warmup.h:243:25: error: unknown type name "StatCollector" [clang-diagnostic-error]
    void addStats(const StatCollector& c) const;
                        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14757/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/warmup.cc:1914:14:
error: out-of-line definition of "addCommonStats" does not match any declaration in "Warmup" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14757/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36213/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/warmup.h:241:31:
error: unknown type name "StatCollector"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36213/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16421/ : FAILURE

Compile error at [2022-01-12T10:44:58.682Z] ../kv_engine/engines/ep/src/warmup.h:241:31:
error: ?StatCollector? does not name a type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16421/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16712/ : FAILURE

Compile error at [2022-01-12T10:45:43.192Z] ../kv_engine/engines/ep/src/warmup.h:241:31:
error: ?StatCollector? does not name a type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16712/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42737/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13603/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24834/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17505/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4402/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15563/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
